--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ API_URL="https://api.uptimerobot.com/v2/"
 # UptimeRobot Api Keys - required
 ## This project only requires Read-only API key
 ## https://dashboard.uptimerobot.com/integrations
-API_KEY=""
+API_KEY="ur1134294-9810f498c01b72043a4d21a3"
 
 # Deployment platform - required
 ## cloudflare ( default ) | auto
@@ -43,4 +43,4 @@ SHOW_LINKS=true
 ## If you want to protect the data, you can set a password
 SITE_PASSWORD=""
 ## Key used for jwt verification, required
-SITE_SECRE_KEY="ur1134294-9810f498c01b72043a4d21a3"
+SITE_SECRE_KEY="site-status"
