--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ API_KEY="ur1134294-9810f498c01b72043a4d21a3"
 # Deployment platform - required
 ## cloudflare ( default ) | auto
 ## If you use a platform other than cloudflare, please change to auto
-DEPLOYMENT_PLATFORM="cloudflare"
+DEPLOYMENT_PLATFORM="auto"
 
 # Site Title
 SITE_TITLE="某科学的贝壳监测站"
